Add .gitattributes for consistent line endings and update project structure references
- Created .gitattributes to enforce LF line endings for various file types.
- Updated .pre-commit-config.yaml to reflect new directory structure (from `nextjs-frontend` to `web` and `fastapi_backend` to `backend`).
- Modified Docker and Makefile configurations to align with the new project structure.
- Adjusted documentation and environment variable paths accordingly.
- Removed obsolete start scripts from both backend and frontend directories.

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -6,7 +6,6 @@ on:
 
 jobs:
   pre-commit:
-
     runs-on: ubuntu-latest
 
     env:
@@ -17,7 +16,6 @@ jobs:
       VERIFICATION_SECRET_KEY: ${{ secrets.VERIFICATION_SECRET_KEY }}
       OPENAPI_OUTPUT_FILE: ${{ secrets.OPENAPI_OUTPUT_FILE }}
       CORS_ORIGINS: ${{ secrets.CORS_ORIGINS }}
-
 
     steps:
       - name: Checkout code
@@ -32,7 +30,7 @@ jobs:
         uses: astral-sh/setup-uv@v5
 
       - name: Install the project
-        working-directory: ./fastapi_backend
+        working-directory: ./backend
         run: uv sync --all-extras --dev
 
       - name: Install pnpm
@@ -47,7 +45,7 @@ jobs:
           node-version: "20"
 
       - name: Install Node dependencies
-        working-directory: ./nextjs-frontend
+        working-directory: ./web
         run: pnpm install
 
       - name: Run pre-commit
