--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,21 +35,21 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: "3.12"
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
 
       - name: Install the project
-        working-directory: ./fastapi_backend
+        working-directory: ./backend
         run: uv sync --all-extras --dev
 
       - name: Run tests
-        working-directory: ./fastapi_backend
+        working-directory: ./backend
         run: uv run coverage run -m pytest
 
       - name: Generate XML coverage report
-        working-directory: ./fastapi_backend
+        working-directory: ./backend
         run: uv run coverage xml -o coverage.xml
 
       - name: Coveralls GitHub Action
@@ -58,7 +58,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           flag-name: python-coverage
           parallel: true
-          path-to-lcov: fastapi_backend/coverage.xml
+          path-to-lcov: backend/coverage.xml
 
   build-frontend:
     name: Next.js CI
@@ -81,11 +81,11 @@ jobs:
           node-version: "20"
 
       - name: Install Node dependencies
-        working-directory: ./nextjs-frontend
+        working-directory: ./web
         run: pnpm install
 
       - name: Run tests
-        working-directory: ./nextjs-frontend
+        working-directory: ./web
         run: pnpm run coverage
 
       - name: Coveralls GitHub Action
@@ -96,10 +96,9 @@ jobs:
           parallel: true
 
   finish:
-
     name: Coveralls
 
-    needs: [ build-fastapi, build-frontend ]
+    needs: [build-fastapi, build-frontend]
 
     runs-on: ubuntu-latest
 
