--- a/.pre-commit-config.docker.yaml
+++ b/.pre-commit-config.docker.yaml
@@ -23,7 +23,7 @@ repos:
     hooks:
       # Run the linter.
       - id: ruff
-        args: [ --fix ]
+        args: [--fix]
       # Run the formatter.
       - id: ruff-format
 
@@ -31,14 +31,14 @@ repos:
     hooks:
       - id: generate-openapi-schema
         name: generate OpenAPI schema
-        entry: sh -c 'docker compose run --rm --no-deps -T backend uv run python -m commands.generate_openapi_schema'
+        entry: wsl sh -c 'docker compose run --rm --no-deps -T backend uv run python -m commands.generate_openapi_schema'
         language: system
         # Only run OpenAPI schema generation if schemas.py, main.py or package version have changed:
         files: (main\.py$|schemas\.py$|pyproject\.toml)
         pass_filenames: false
       - id: generate-frontend-client
         name: generate frontend client
-        entry: sh -c 'docker compose run --rm --no-deps -T frontend pnpm run generate-client'
+        entry: wsl sh -c 'docker compose run --rm --no-deps -T frontend pnpm run generate-client'
         language: system
         # Only run frontend client generation if frontend files have changed:
         files: ^local-shared-data/openapi\.json$
