--- a/prod-frontend-deploy.yml
+++ b/prod-frontend-deploy.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: nextjs-frontend
+        working-directory: web
     steps:
       - uses: actions/checkout@v2
 
