Enhance Docker and application setup for development
- Updated docker-compose.yml to run the frontend as the 'node' user and added environment variables for file change polling.
- Refactored backend Dockerfile to use a new start script for improved environment handling.
- Introduced start.sh scripts for both frontend and backend to streamline application startup in Docker and local environments.
- Added new components for navigation and footer in the web application, enhancing user experience.
- Created new pages for 'About Us' and 'How It Works' to provide users with essential information about the platform.
- Updated global styles and layout for better visual consistency and user engagement.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,5 +29,5 @@ COPY . .
 # Expose the application port
 EXPOSE 8000
 
-# Command to run the application - starts FastAPI with hot reload and watcher
-CMD ["sh", "-c", "fastapi dev app/main.py --host 0.0.0.0 --port 8000 --reload & python watcher.py & wait"]
+# Command to run the application
+CMD ["./start.sh"]
