--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,17 @@ services:
       - "8025:8025" # Web UI
     networks:
       - my_network
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    networks:
+      - my_network
+    depends_on:
+      - db
 
 volumes:
   postgres_data:
